[package]
authors = ["CodeEagle <stasura@htomail.com>"]
edition = "2021"
name = "flutter-resource-manager-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2"
# napi-derive = "2"
# napi = { version = "2.10.0", default-features = false, features = ["napi4"] }
napi-derive = "2.9.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3.0"
notify = "5.0.0"
serde_json = "1.0.64"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
